--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,3 +18,10 @@ build_script:
 
 test_script:
   - npm run lint && npm test  # скрипт тестирования
+
+deploy_script: # скрипт развёртывания
+- git config --global credential.helper store
+- git config --global user.name "Alexey Shishkin"
+- git config --global user.email %github_email%
+- echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
+- npx push-dir --dir=dist --branch=gh-pages --force --verbose
